--- a/_prj_msvc2019/marty-yaml2json.vcxproj
+++ b/_prj_msvc2019/marty-yaml2json.vcxproj
@@ -174,6 +174,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\src\marty-yaml2json.cpp" />
+    <ClCompile Include="..\_libs\sfmt\umba_lout.cpp" />
     <ClCompile Include="..\_libs\yaml-cpp\src\binary.cpp" />
     <ClCompile Include="..\_libs\yaml-cpp\src\convert.cpp" />
     <ClCompile Include="..\_libs\yaml-cpp\src\depthguard.cpp" />
